[gd_scene load_steps=13 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://menus/start_menu.tscn" type="PackedScene" id=2]
[ext_resource path="res://menus/options_menu.tscn" type="PackedScene" id=3]
[ext_resource path="res://main_theme.tres" type="Theme" id=4]
[ext_resource path="res://reader/reader.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/audio/Moonlight_Reprise.ogg" type="AudioStream" id=6]
[ext_resource path="res://assets/audio/372-AAA_landing.ogg" type="AudioStream" id=7]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 25, 25, 50 )

[sub_resource type="SpatialMaterial" id=2]
flags_unshaded = true
params_diffuse_mode = 4
params_cull_mode = 1
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 2
emission_box_extents = Vector3( 40, 25, 0.5 )
spread = 180.0
gravity = Vector3( 0, 0, 2 )
hue_variation = 1.0

[sub_resource type="SpatialMaterial" id=4]
flags_unshaded = true
flags_no_depth_test = true

[sub_resource type="PointMesh" id=5]
material = SubResource( 4 )

[node name="main" type="Spatial"]
script = ExtResource( 1 )
book_corpus_file = "res://data/books/big_book.txt"
first_names_corpus_file = "res://data/norwayFirstNames.json"
surnames_corpus_file = "res://data/authors.json"
honor_corpus_file = "res://data/englishHonorifics.json"
has_honorific = true
has_subtitle = true
characters_per_line = 100
library_directory = "user://library"

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3 )
fov = 84.0

[node name="MeshInstance" type="MeshInstance" parent="Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -15 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="SpaceField" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -25 )
visible = false

[node name="Particles" type="Particles" parent="SpaceField"]
amount = 512
lifetime = 10.0
process_material = SubResource( 3 )
draw_pass_1 = SubResource( 5 )

[node name="Menus" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartMenu" parent="Menus" instance=ExtResource( 2 )]
visible = true
margin_right = -15.0
margin_bottom = -16.0

[node name="OptionsMenu" parent="Menus" instance=ExtResource( 3 )]

[node name="TheBook" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reader" parent="TheBook" instance=ExtResource( 5 )]
visible = false

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Music" type="Node" parent="."]

[node name="StartMenuBG" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource( 6 )
volume_db = -19.285
autoplay = true

[node name="Ambient" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource( 7 )
volume_db = -19.285
[connection signal="call_options" from="Menus/StartMenu" to="." method="_on_StartMenu_call_options"]
[connection signal="continue_wip" from="Menus/StartMenu" to="." method="_on_StartMenu_continue_wip"]
[connection signal="call_start" from="Menus/OptionsMenu" to="." method="_on_OptionsMenu_call_start"]
[connection signal="start_game" from="Menus/OptionsMenu" to="." method="_on_OptionsMenu_start_game"]
[connection signal="choice_made" from="TheBook/Reader" to="." method="_on_Reader_choice_made"]
